previos errores fixeados, ahora, deberia hacer un overflow en el profile data

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -136,7 +136,6 @@ a{
 
   .dropdown-menu {
     display: none;
-    position: absolute;
     background-color: #ffffff;
     box-shadow: 0 0.4vw 0.6vw rgba(0, 0, 0, 0.1);
     width: 100%;
